# ipp-sys

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tpl
example/: Cargo.toml
example/src/: main.rs
ipp-ctypes/: Cargo.toml  README.md
ipp-ctypes/src/: lib.rs
ipp-headers-sys/: Cargo.toml  README.md  build.rs
ipp-headers-sys/src/: ipp_2017.rs  ipp_2018.rs  ipp_2019.rs  lib.rs
ipp-sys/: Cargo.toml  README.md  README.tpl
ipp-sys-build-help/: Cargo.toml  README.md
ipp-sys-build-help/src/: lib.rs
ipp-sys/examples/: simple.rs
ipp-sys/src/: lib.rs
ipp-sys/tests/: test_ipp.rs
link-ippcore/: Cargo.toml  README.md  build.rs
link-ippcv/: Cargo.toml  README.md  build.rs
link-ippcv/src/: lib.rs
link-ippi/: Cargo.toml  README.md  build.rs
link-ippi/src/: lib.rs
link-ipps/: Cargo.toml  README.md  build.rs
link-ipps/src/: lib.rs
link-ippvm/: Cargo.toml  README.md  build.rs
link-ippvm/src/: lib.rs
