[package]
name = "ipp-ctypes"
description = "C types used by ipp-headers-sys (part of ipp-sys Intel IPP bindings)"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/astraw/ipp-sys"
license = "MIT/Apache-2.0"
categories = ["external-ffi-bindings"]

[dependencies]
