[package]
name = "ipp-headers-sys"
description = "rust-bindgen generated FFI declarations for IPP (part of ipp-sys Intel IPP bindings)"
version = "0.4.3"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/astraw/ipp-sys"
license = "MIT/Apache-2.0"
categories = ["external-ffi-bindings"]
readme = "README.md"

[package.metadata.docs.rs]
features = [ "2019" ]

[features]
2017=[]
2018=[]
2019=[]
