[package]
name = "ipp-sys-build-help"
description = "helper for linking IPP libraries (part of ipp-sys Intel IPP bindings)"
version = "0.1.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/astraw/ipp-sys"
license = "MIT/Apache-2.0"
categories = ["external-ffi-bindings"]
readme = "README.md"

[dependencies]
