[package]
name = "link-ippi"
description = "link ippi library (part of ipp-sys Intel IPP bindings)"
version = "0.1.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
build = "build.rs"
links = "libippi"
repository = "https://github.com/astraw/ipp-sys"
license = "MIT/Apache-2.0"
categories = ["external-ffi-bindings"]
readme = "README.md"

[dependencies]
link-ippcore = { version = "0.1", path = "../link-ippcore" }
link-ipps = { version = "0.1", path = "../link-ipps" }

[build-dependencies]
ipp-sys-build-help = { version = "0.1", path = "../ipp-sys-build-help" }
